Use Collections.emptyList and Optional.of